[gd_scene load_steps=3 format=3 uid="uid://btspjidsxdw7p"]

[ext_resource type="Script" uid="uid://ceicsv7pcxry3" path="res://scenes/program/text_editor_program.gd" id="1_1ka7o"]
[ext_resource type="Theme" uid="uid://drrt0lg0vdcoc" path="res://assets/Themes/Classic95/win95.tres" id="1_ecr0y"]

[node name="TextEditorProgram" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ecr0y")
script = ExtResource("1_1ka7o")
metadata/_custom_type_script = "uid://ux0kmfe1uanu"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MenuBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="FileMenu" type="MenuButton" parent="VBoxContainer/MenuBar"]
layout_mode = 2
text = "File"

[node name="EditMenu" type="MenuButton" parent="VBoxContainer/MenuBar"]
layout_mode = 2
text = "Edit"

[node name="TextEdit" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="StatusBar" type="HBoxContainer" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[node name="FileNameLabel" type="RichTextLabel" parent="VBoxContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Untitled"
fit_content = true
scroll_active = false

[node name="ModifiedIndicator" type="RichTextLabel" parent="VBoxContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "‚óè"
scroll_active = false

[node name="Spacer" type="Control" parent="VBoxContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 5.0

[node name="LineColLabel" type="RichTextLabel" parent="VBoxContainer/StatusBar"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Ln 1, Col 1"
scroll_active = false
